fix alignment of photo header on about page

--- a/style.scss
+++ b/style.scss
@@ -204,6 +204,21 @@ li.pull-right {
   }
 }
 
+// New tbox
+.ab-box {
+  margin: 8px;
+  padding: 8px;
+  border: 4px solid rgba(0,0,0,0.25);
+  border-radius: 8px;
+  background: rgba(0,0,0,0.5);
+  img {
+    margin-right: 8px;
+  }
+}
+
+
+
+
 
 
 // == Portfolio Page ==
